istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway    
metadata:
  name: simple-istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller  <-- selector 타입으로 istio-gateway를 사용하였기 때문에 gateway의 트래픽을 받을 Virtual Service가 등록되어야 함!!
  servers:
  - port:
      number: 80      # 80으로 Listen
      name: http
      protocol: HTTP   # http로 Client트래픽을 받도록 함
    hosts:
    - "*"              # 모든 호스트 허용
